--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "rimraf": "^3.0.2",
     "sass": "^1.49.0",
     "sass-loader": "^12.4.0"
+  },
+  "dependencies": {
+    "gsap": "^3.13.0",
+    "powerglitch": "^2.4.0"
   }
 }
